Fix Games List Hiding Behind ThisYear Section, Support For More Than Two Games In ThisYear

--- a/src/pages/Home/sections/Header/Header.module.scss
+++ b/src/pages/Home/sections/Header/Header.module.scss
@@ -2,8 +2,8 @@
 
 .Header {
     width: 100vw;
-    min-height: 90rem;
-    height: 100vh;
+    min-height: 100vh;
+    margin-bottom: 5rem;
 
     // position: relative;
 
